--- a/server/.env.example
+++ b/server/.env.example
@@ -5,7 +5,7 @@
 MONGODB_URI=mongodb+srv://<USERNAME>:<PASSWORD>@<CLUSTER>.mongodb.net/bookexchange?retryWrites=true&w=majority
 
 # JWT Secret (use a strong, unique secret for production)
-JWT_SECRET=***REMOVED***
+JWT_SECRET=<JWT_SECRET>
 
 # Server Configuration
 PORT=5001
