Security: Remove all mongodb+srv:// patterns to prevent GitHub secret scanning false positives

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,8 @@
 # Server Environment Variables
 # Copy this file to .env and fill in your actual values
 
-# Database
-MONGODB_URI=mongodb+srv://<USERNAME>:<PASSWORD>@<CLUSTER>.mongodb.net/bookexchange?retryWrites=true&w=majority
+# Database (Get your connection string from MongoDB Atlas Dashboard)
+MONGODB_URI=<YOUR_MONGODB_CONNECTION_STRING>
 
 # JWT Secret (use a strong, unique secret for production)
 JWT_SECRET=<JWT_SECRET>
