chore(client): set VITE_API_URL to https://api.exchangebook.me/api for production; update constants production fallback

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,8 +1,7 @@
-# Client Environment Variables
-# Copy this file to .env.production and fill in your actual values
+# Client Environment Variables (Production)
 
-# API Configuration (your deployed backend URL)
-VITE_API_URL=https://your-backend-api.com/api
+# API Configuration (deployed backend URL)
+VITE_API_URL=https://api.exchangebook.me/api
 
 # Environment
 NODE_ENV=production
