--- a/aws/nginx.conf
+++ b/aws/nginx.conf
@@ -1,35 +1,38 @@
-# Nginx configuration for reverse proxy
-# Save this as /etc/nginx/sites-available/bookexchange
+## Nginx reverse proxy for Book Exchange API (SSL-ready)
+# Save as /etc/nginx/sites-available/bookexchange and symlink into sites-enabled
 
+# 1) HTTP → HTTPS redirect
 server {
     listen 80;
-    server_name your-domain.com www.your-domain.com;
+    listen [::]:80;
+    server_name your-domain.com www.your-domain.com;  # TODO: replace with your real domain(s)
 
-    # Redirect HTTP to HTTPS (optional, for SSL)
-    # return 301 https://$server_name$request_uri;
+    # Redirect all HTTP to HTTPS
+    return 301 https://$host$request_uri;
+}
 
-    location / {
-        proxy_pass http://localhost:5001;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-        
-        # CORS headers
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-    }
+# 2) HTTPS reverse proxy to Node API on port 5001
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name your-domain.com www.your-domain.com;  # TODO: replace with your real domain(s)
 
-    # Health check endpoint
-    location /health {
-        proxy_pass http://localhost:5001/api/test;
-        proxy_set_header Host $host;
-    }
+    # Let's Encrypt certificate paths (after issuing cert)
+    ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;       # TODO
+    ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;     # TODO
+
+    # Strong SSL defaults
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+    ssl_ciphers 'TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:TLS_AES_128_GCM_SHA256:ECDHE+AESGCM:ECDHE+CHACHA20';
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_tickets off;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+
+    # Allow larger payloads (Express is configured for ~50MB)
+    client_max_body_size 50M;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
@@ -38,36 +41,50 @@ server {
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
     add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
-    # Gzip compression
+    # Gzip
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
     gzip_proxied expired no-cache no-store private must-revalidate no_last_modified no_etag auth;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
+
+    # Main API proxy (prefix-agnostic)
+    location / {
+        proxy_pass http://127.0.0.1:5001;
+        proxy_http_version 1.1;
+
+        # WebSocket/upgrade headers
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+
+        # Standard proxy headers
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+
+        # Timeouts (for large uploads)
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 120s;
+        proxy_read_timeout 120s;
+
+        # Optional: CORS (prefer handling in app/CORS_ORIGINS)
+        # add_header 'Access-Control-Allow-Origin' '*';
+        # add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        # add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+    }
+
+    # Health check passthrough (adjust path if needed)
+    location /api/health {
+        proxy_pass http://127.0.0.1:5001/api/health;
+        proxy_set_header Host $host;
+    }
 }
 
-# HTTPS configuration (uncomment when SSL certificate is configured)
-# server {
-#     listen 443 ssl http2;
-#     server_name your-domain.com www.your-domain.com;
-#
-#     ssl_certificate /path/to/your/certificate.crt;
-#     ssl_certificate_key /path/to/your/private.key;
-#
-#     # SSL configuration
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384;
-#     ssl_prefer_server_ciphers off;
-#
-#     location / {
-#         proxy_pass http://localhost:5001;
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection 'upgrade';
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_cache_bypass $http_upgrade;
-#     }
-# }
+# Helper: map for Connection upgrade header
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
