--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "@aws-sdk/client-s3": "^3.654.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.3"
   },
