--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "@aws-sdk/client-s3": "^3.654.0",
     "@aws-sdk/s3-request-presigner": "^3.654.0",
+  "sharp": "^0.33.4",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
