chore(scripts): add backfill-thumbnails utility with dry-run support; add npm script\n\nBackfills legacy image entries to object-form { original, thumb } and generates missing thumbnails from S3 originals. Safe by default (DRY RUN).

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build-indexes": "node scripts/build-indexes.js"
+    "build-indexes": "node scripts/build-indexes.js",
+    "backfill-thumbnails": "node scripts/backfill-thumbnails.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
