chore(git): ignore .github and .vscode folders; untrack existing .github files

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,6 @@ Thumbs.db
 
 # Security and sensitive documentation
 guide/SECURITY_SECRETS_GUIDE.md
+
+# Repository meta (ignore GitHub config directory)
+.github/
